objects/LocalFlosum__FL_Sync__c.object
<CustomObject   >
    <fields>
        <fullName>LocalFlosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Number_of_Components__c</fullName>
        <label>Number of Components</label>
        <summaryForeignKey>LocalFlosum__FL_Sync_Component__c.LocalFlosum__Sync__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Sync_Type__c</fullName>
        <label>Sync Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>